Basic layout and sidebar layout

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: sans-serif;
+
 }
 
 ul {
@@ -10,27 +12,175 @@ ul {
 
 .main-container {
   display: grid;
-  grid-template-columns: 1fr 3fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 1fr 4fr;
+  grid-template-rows: repeat(auto-fit, 1fr);
 }
 
 .sidebar {
   border: 1px solid salmon;
+  background-color: rgb(32, 150, 228);
+  color: whitesmoke;
   grid-column: 1 / 2;
   grid-row: 1 / 3;
   display: grid;
-  grid-template-rows: repeat(10, 1fr);
+  grid-template-columns: 1fr ;
+  grid-template-rows: 1fr 0.5fr 5fr 3fr;
 }
 
-.sidebar > * {
+.logo {
   border: 1px solid salmon;
-  color: red;
+  display: grid;
+  font-size: 28px;
+  grid-template-columns: 1fr 2fr 2fr 2fr;
+  grid-template-rows: 1fr;
+  align-items: center;
 }
+
+.logo-pic {
+  grid-column: 2 / 3;
+}
+
+.nav {
+  border: 3px solid greenyellow;
+  display: grid;
+  height: 30rem;
+  grid-template-columns: 1fr 2fr 2fr 2fr;
+  grid-template-rows: 3fr 1fr 3fr 2fr;
+  grid-row: 3 / 4;
+  /* align-content: space-between; */
+
+}
+
+.nav-upper-icon {
+  border: 1px solid salmon;
+  grid-column: 2 / 3;
+  display: grid;
+
+
+}
+
+.nav-upper-text {
+  border: 1px solid salmon;
+  grid-column: 3 / 4;
+  display: grid;
+
+
+
+}
+
+.nav-lower-icon {
+  border: 1px solid salmon;
+  grid-column: 2 / 3;
+  grid-row: 3 / 4;
+  display: grid;
+
+
+
+}
+
+.nav-lower-text {
+  border: 1px solid salmon;
+  grid-column: 3 / 4;
+  grid-row: 3 / 4;
+  display: grid;
+
+
+
+}
+
+.upper-icon,
+.upper-text,
+.lower-icon,
+.lower-text {
+  border: 1px solid salmon;
+
+}
+
 
 .header {
   border: 1px solid green;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
 }
+
+.header-upper {
+  border: 1px solid green;
+  grid-row: 1 / 2;
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+
+}
+
+.header-upper-left {
+  border: 1px solid green;
+  grid-column: 1 / 2;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+}
+
+.header-upper-right {
+  border: 1px solid green;
+  grid-column: 2 / 3;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+
+.header-lower {
+  border: 1px solid green;
+  grid-row: 2 / 3;
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+
+}
+
+.header-lower-left {
+  border: 1px solid green;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.header-lower-left img{
+  grid-column: 1 / 2;
+
+}
+
+.header-lower-left p{
+  grid-column: 2 / 3;
+
+}
+
+/* .header-lower-right {
+  border: 1px solid green;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+} */
+
+
 
 .main-content {
   border: 1px solid blueviolet;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: 1fr 1fr;
+}
+
+.projects {
+  border: 1px solid blueviolet;
+
+}
+
+.annoucements{
+  border: 1px solid blueviolet;
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+
+
+}
+
+.trending {
+  border: 1px solid blueviolet;
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+
 }
