--- a/styles.css
+++ b/styles.css
@@ -2,18 +2,25 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: sans-serif;
-
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 ul {
   list-style-type: none;
 }
 
+body {
+  display: flex;
+  justify-content: center;
+  background-color: black;
+}
+
 .main-container {
+  height: 100vh;
+  width: 80vw;
   display: grid;
   grid-template-columns: 1fr 4fr;
-  grid-template-rows: repeat(auto-fit, 1fr);
+  grid-template-rows: 1fr 4fr;
 }
 
 .sidebar {
@@ -24,12 +31,13 @@ ul {
   grid-row: 1 / 3;
   display: grid;
   grid-template-columns: 1fr ;
-  grid-template-rows: 1fr 0.5fr 5fr 3fr;
+  grid-template-rows: 1fr 0.5fr 10fr;
 }
 
 .logo {
   border: 1px solid salmon;
   display: grid;
+  font-weight: bolder;
   font-size: 28px;
   grid-template-columns: 1fr 2fr 2fr 2fr;
   grid-template-rows: 1fr;
@@ -43,7 +51,9 @@ ul {
 .nav {
   border: 3px solid greenyellow;
   display: grid;
-  height: 30rem;
+  height: 78vh;
+  font-size: 20px;
+  font-weight: bolder;
   grid-template-columns: 1fr 2fr 2fr 2fr;
   grid-template-rows: 3fr 1fr 3fr 2fr;
   grid-row: 3 / 4;
@@ -99,6 +109,7 @@ ul {
 
 .header {
   border: 1px solid green;
+  background-color: whitesmoke;
   display: grid;
   grid-template-rows: 1fr 1fr;
 }
@@ -107,7 +118,7 @@ ul {
   border: 1px solid green;
   grid-row: 1 / 2;
   display: grid;
-  grid-template-columns: 3fr 1fr;
+  grid-template-columns: 2fr 1fr;
 
 }
 
@@ -115,7 +126,16 @@ ul {
   border: 1px solid green;
   grid-column: 1 / 2;
   display: grid;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 1fr 5fr 3fr;
+}
+
+.header input {
+  background-color: rgb(214, 213, 213);
+  border-radius: 10px;
+  border: 0px solid transparent;
+  height: 1.8rem;
+  width: 35rem;
+  margin: 0.5rem 0 0.5rem 0;
 }
 
 .header-upper-right {
@@ -130,18 +150,20 @@ ul {
   border: 1px solid green;
   grid-row: 2 / 3;
   display: grid;
-  grid-template-columns: 3fr 1fr;
+  grid-template-columns: 1.5fr 1fr;
 
 }
 
 .header-lower-left {
   border: 1px solid green;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 3fr;
 }
 
 .header-lower-left img{
   grid-column: 1 / 2;
+  grid-row: 1 / 3;
+  align-self: center;
 
 }
 
@@ -150,37 +172,172 @@ ul {
 
 }
 
-/* .header-lower-right {
-  border: 1px solid green;
+.hi-there {
+  align-self: end;
+}
+
+.header-lower-right {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-} */
 
+
+}
+
+.header button {
+  margin: 1.6rem 1rem;
+  background-color: rgb(46, 126, 211);
+  color: whitesmoke;
+  border-radius: 20px;
+  border: 0px solid transparent;
+
+}
 
 
 .main-content {
   border: 1px solid blueviolet;
+  background-color: rgb(214, 213, 213);
   display: grid;
-  grid-template-columns: 2fr 1fr;
+  grid-template-columns: 2.5fr 1fr;
   grid-template-rows: 1fr 1fr;
 }
 
 .projects {
   border: 1px solid blueviolet;
+  display: grid;
+  grid-row: 1 / 3; 
+  grid-template-rows: 1fr 25fr;
+  padding: 1rem;
+  align-items: start;
+
+
 
 }
+
+.projects > p {
+  grid-row: 1 / 2;
+  font-weight: bolder;
+  font-size: 1.2rem;
+}
+
+.card-container {
+  grid-row: 2 / 3;
+  display: grid;
+  grid-template-columns: repeat(2,  minmax(250px, 1fr));
+  gap: 15px;
+  align-content: start;
+}
+
+.card-container .card {
+  background-color: whitesmoke;
+  border-radius: 20px;
+  display: grid;
+  padding: 1rem;
+  height: 15rem;
+}
+
+.card-container .title {
+  align-self: end;
+  font-size: 1.2rem;
+  font-weight: bolder;
+  line-height: 2;
+}
+
+.card-container p:nth-child(2) {
+  padding-right: 3rem;
+  color: grey;
+  /* align-items: start; */
+}
+
+.card-icon {
+  display: grid;
+  grid-template-columns: 3fr 1fr 1fr 1fr;
+}
+
+.card-icon img:nth-child(1) {
+  grid-column: 2 / 3;
+}
+
 
 .annoucements{
   border: 1px solid blueviolet;
   grid-column: 2 / 3;
   grid-row: 1 / 2;
-
-
+  padding: 1rem;
+  display: grid;
+  grid-template-rows: 1fr 11.5fr;
 }
+
+.annoucements-container {
+  background-color: whitesmoke;
+  border-radius: 20px;
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  padding: 0.5rem 1rem 0 1rem;
+  width: 18rem;
+  height: 21rem;
+}
+
+.annoucements > p {
+  font-weight: bolder;
+  font-size: 1.2rem;
+}
+
+.annoucements .title {
+  align-self: end;
+  font-size: 0.9rem;
+  font-weight: bolder;
+  line-height: 2;
+}
+
+.annoucements .bottom-1,
+.annoucements .bottom-2 {
+  border-bottom: 3px solid lightgrey;
+  padding-bottom: 0.6rem;
+  color: grey;
+  font-size: 0.8rem;
+}
+
+.annoucements .bottom-3 {
+  color: grey;
+  font-size: 0.8rem;
+}
+
+
 
 .trending {
   border: 1px solid blueviolet;
   grid-column: 2 / 3;
-  grid-row: 2 / 3;
+  padding: 1rem;
+  display: grid;
+  grid-template-rows: 1fr 11.5fr;
+}
 
+.trending > p {
+  font-weight: bolder;
+  font-size: 1.2rem;
+}
+
+.trending-container {
+  background-color: whitesmoke;
+  border-radius: 20px;
+  padding: 1rem;
+  width: 18rem;
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+
+}
+
+.trending .card {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 1fr 1fr;
+}
+
+.trending img {
+  grid-row: 1 / 3;
+  align-self: center;
+}
+
+.trending-container p:nth-child(2) {
+  align-self: end;
 }
