--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Roboto, sans-serif;
 }
 
 ul {
@@ -24,18 +24,18 @@ body {
 }
 
 .sidebar {
-  border: 1px solid salmon;
+  /* border: 1px solid salmon; */
   background-color: rgb(32, 150, 228);
   color: whitesmoke;
   grid-column: 1 / 2;
   grid-row: 1 / 3;
   display: grid;
   grid-template-columns: 1fr ;
-  grid-template-rows: 1fr 0.5fr 10fr;
+  grid-template-rows: 1fr 1fr 10fr;
 }
 
 .logo {
-  border: 1px solid salmon;
+  /* border: 1px solid salmon; */
   display: grid;
   font-weight: bolder;
   font-size: 28px;
@@ -49,71 +49,44 @@ body {
 }
 
 .nav {
-  border: 3px solid greenyellow;
+  /* border: 3px solid greenyellow; */
   display: grid;
-  height: 78vh;
+  height: 50vh;
   font-size: 20px;
   font-weight: bolder;
   grid-template-columns: 1fr 2fr 2fr 2fr;
-  grid-template-rows: 3fr 1fr 3fr 2fr;
+  grid-template-rows: repeat(auto-fit, 1fr);
   grid-row: 3 / 4;
-  /* align-content: space-between; */
-
 }
 
 .nav-upper-icon {
-  border: 1px solid salmon;
+  /* border: 1px solid salmon; */
   grid-column: 2 / 3;
   display: grid;
-
-
+  justify-items: center;
 }
 
 .nav-upper-text {
-  border: 1px solid salmon;
+  /* border: 1px solid salmon; */
   grid-column: 3 / 4;
   display: grid;
-
-
-
 }
 
-.nav-lower-icon {
-  border: 1px solid salmon;
-  grid-column: 2 / 3;
-  grid-row: 3 / 4;
-  display: grid;
-
-
-
+.nav-filler {
+  height: 2rem;
 }
-
-.nav-lower-text {
-  border: 1px solid salmon;
-  grid-column: 3 / 4;
-  grid-row: 3 / 4;
-  display: grid;
-}
-
-.upper-icon,
-.upper-text,
-.lower-icon,
-.lower-text {
-  border: 1px solid salmon;
-}
-
 
 .header {
   /* border: 1px solid green; */
   background-color: whitesmoke;
   display: grid;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: 1fr 1.2fr;
   position: relative;
   box-shadow: 0px 5px 8px -5px rgba(0, 0, 0, 0.6);
 }
 
 .header-upper {
-  border: 1px solid green;
+  /* border: 1px solid green; */
   grid-row: 1 / 2;
   display: grid;
   grid-template-columns: 2fr 1fr;
@@ -121,10 +94,16 @@ body {
 }
 
 .header-upper-left {
-  border: 1px solid green;
+  /* border: 1px solid green; */
   grid-column: 1 / 2;
   display: grid;
-  grid-template-columns: 1fr 5fr 3fr;
+  grid-template-columns: 1fr 1fr 5fr 3fr;
+  align-items: center;
+}
+
+.header-upper-left svg {
+  justify-self: center;
+  grid-column: 2 / 3;
 }
 
 .header input {
@@ -137,77 +116,101 @@ body {
 }
 
 .header-upper-right {
-  border: 1px solid green;
+  /* border: 1px solid green; */
   grid-column: 2 / 3;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  align-items: center;
 }
 
+.header-upper-right svg {
+  justify-self: end;
+  
+}
+
+.header-upper-right p:nth-child(3) {
+  font-weight: bolder;
+}
+
+.profile-small {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  object-fit: cover;
+  box-shadow: 0 5px 8px -5px rgba(0, 0, 0, 0.6);
+  justify-self: center;
+}
 
 .header-lower {
   /* border: 1px solid green; */
   grid-row: 2 / 3;
   display: grid;
+  height: 6.5rem;
   grid-template-columns: 1.5fr 1fr;
 }
 
 .header-lower-left {
-  border: 1px solid green;
+  /* border: 1px solid green; */
   display: grid;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 0.3fr 1fr 5fr;
+  gap: 8px;
 }
 
-.header-lower-left img{
-  grid-column: 1 / 2;
-  grid-row: 1 / 3;
-  align-self: center;
-
-}
-
-.header-lower-left p{
+.profile-large {
   grid-column: 2 / 3;
+  grid-row: 1 / 3;
+  justify-self: center;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-top: 5px;
+}
 
+.header-lower-left p {
+  grid-column: 3 / 4;
+}
+
+.header-lower-left p:nth-child(3) {
+  font-weight: bolder;
+  font-size: 22px;
 }
 
 .hi-there {
   align-self: end;
   font-size: 0.9rem;
+  font-weight: bolder;
 }
 
 .header-lower-right {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-
-
+  grid-template-columns: 1fr 1fr 1fr 0.4fr;
 }
 
 .header button {
-  margin: 0.7rem 1rem;
+  margin: 1.9rem 1rem;
   background-color: rgb(46, 126, 211);
   color: whitesmoke;
   border-radius: 20px;
   border: 0px solid transparent;
   font-weight: bolder;
-  font-size: 1rem;
-
+  font-size: 1rem;;
 }
 
-
 .main-content {
-  border: 1px solid blueviolet;
+  /* border: 1px solid blueviolet; */
   background-color: rgb(214, 213, 213);
   display: grid;
   grid-template-columns: 2.5fr 1fr;
   grid-template-rows: 1fr 1fr;
-  padding: 1rem 0 4rem 0;
 }
 
 .projects {
-  border: 1px solid blueviolet;
+  /* border: 1px solid blueviolet; */
   display: grid;
   grid-row: 1 / 3; 
   grid-template-rows: 1fr 25fr;
-  padding: 1rem;
+  padding: 1rem 1rem 0 1rem;
   align-items: start;
 }
 
@@ -215,11 +218,13 @@ body {
   grid-row: 1 / 2;
   font-weight: bolder;
   font-size: 1.2rem;
+  margin-left: 1rem;
 }
 
 .card-container {
   grid-row: 2 / 3;
   display: grid;
+  padding: 0 0 0 1rem;
   grid-template-columns: repeat(2,  minmax(200px, 1fr));
   gap: 15px;
   align-content: start;
@@ -234,6 +239,8 @@ body {
   border-left: 10px solid orange;
   position: relative;
   box-shadow: 0px 5px 8px -5px rgba(0, 0, 0, 0.6);
+  min-width: 0;
+
 }
 
 .card-container .title {
@@ -246,20 +253,23 @@ body {
 .card-container p:nth-child(2) {
   padding-right: 3rem;
   color: grey;
+  min-height: 0;
+  overflow: hidden;
 }
 
 .card-icon {
   display: grid;
-  grid-template-columns: 3fr 1fr 1fr 1fr;
+  grid-template-columns: 4fr 1fr 1fr 1fr;
+
 }
 
-.card-icon img:nth-child(1) {
+.card-icon svg:nth-child(1) {
   grid-column: 2 / 3;
 }
 
 
 .annoucements{
-  border: 1px solid blueviolet;
+  /* border: 1px solid blueviolet; */
   grid-column: 2 / 3;
   grid-row: 1 / 2;
   padding: 1rem;
@@ -305,11 +315,11 @@ body {
 }
 
 .trending {
-  border: 1px solid blueviolet;
+  /* border: 1px solid blueviolet; */
   grid-column: 2 / 3;
   padding: 1rem;
   display: grid;
-  grid-template-rows: 1fr 11.5fr;
+  grid-template-rows: 1fr 11fr;
 }
 
 .trending > p {
@@ -327,18 +337,23 @@ body {
   grid-template-rows: 1fr 1fr 1fr;
   position: relative;
   box-shadow: 0px 5px 8px -5px rgba(0, 0, 0, 0.6);
-
 }
 
 .trending .card {
   display: grid;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 1fr 2fr;
   grid-template-rows: 1fr 1fr;
 }
 
 .trending img {
   grid-row: 1 / 3;
   align-self: center;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  object-fit: cover;
+  justify-self: center;
+  box-shadow: 0 5px 8px -5px rgba(0, 0, 0, 0.6);
 }
 
 .trending-container p:nth-child(2) {
